# MAWS_2025

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  README_orig.md  algorithm.md  docker-compose.yml  environment.yml  pyproject.toml  readme.md  requirements.txt
.github/workflows/: ci.yml
MAWS/src/: Complex.py  DefineStructueXML.py  Kernels.py  LoadFrom.py  Prepare.py  Routines.py  Spaces.py  Structure.py  helpers.py  maws_cli.py
MAWS/src/__pycache__/: Kernels.center_of_mass-105.py311.1.nbc  Kernels.center_of_mass-105.py311.nbi
MAWS/utils/: pdb_cleaner.py
data/: LIG.lib  PFOA.sdf  create_sequence.leap
docs/: README.md  chain.md  complex.md  gpu_setup_and_experiment_guide.md  pdb_cleaner.md  run.md  space.md  structure.md
examples/: PDB.lib  basic_complex_build.py  complex_energy_build.py  special_PDB_files.txt
heidelberg_maws/: Complex.py  Kernels.py  LoadFrom.py  MAWS2023.py  Prepare.py  Space.py  Structure.py  dna_structure.py  rna_structure.py  structure.py  submit_maws.sh  tools.py
maws/: MAWS2023.py  Prepare.py  __init__.py  chain.py  complex.py  dna_structure.py  helpers.py  kernels.py  maws2023.py  pdb_cleaner.py  prepare.py  rna_structure.py  routines.py  run.py  space.py  structure.py  tools.py
maws.egg-info/: PKG-INFO  SOURCES.txt
notebooks/: space_analysis.ipynb
notebooks/1a_sequence_3d/: 1_create_sequence_file.ipynb  2_aptamer_folding_3dDNA.ipynb
notebooks/1b_maws/: maws.ipynb
notebooks/2_docking/: docking.ipynb
notebooks/3_molecular_dynamics/: md.mdp  mdout.mdp  molecular_dynamics.ipynb  npt.mdp  nvt.mdp
notebooks/maws/: debug.ipynb  maws.ipynb  space_analysis.ipynb
scripts/: run_gpu_protein_experiment.sh
tests/: conftest.py  test_chain.py  test_chain_complex.py  test_complex.py  test_helpers.py  test_imports.py  test_load_from.py  test_maws2023_cli.py  test_notebooks.py  test_pdb_cleaner.py  test_prepare.py  test_rna_dna_structure.py  test_routines.py  test_run.py  test_space.py  test_spaces.py  test_structure.py  test_tools.py
