[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maws"
version = "0.1.0.dev0"
description = "MAWS: residue-based chemistry, complex preparation, and OpenMM routines for aptamer workflows"
readme = "README.md"
requires-python = ">=3.10,<3.14"

# Runtime dependencies
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "openmm>=8.0",
  "mpmath>=1.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov",
  "ruff>=0.12",
  "pre-commit",
]
# For GPU acceleration (CUDA)
gpu = [
  "openmm-cuda",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["maws*"]

[tool.setuptools.package-data]
# if you later move data under maws/, switch to:
# maws = ["data/*.pdb", "data/*.sdf", "data/*.lib", "data/*.frcmod"]

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = ["__pycache__", ".venv", "build", "dist", ".git"]

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP", "N", "C4"]
ignore = ["N803", "N806"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
  "integration: marks tests as integration tests (require AmberTools/OpenMM)",
  "slow: marks tests as slow running",
  "gpu: marks tests that require GPU",
]
