[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maws"
version = "0.1.0.dev0"
description = "MAWS: residue-based chemistry, complex preparation, and OpenMM routines for aptamer workflows"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = { file = "LICENSE" }
authors = [
  { name = "German Center for Open Source AI", email = "info@gcos.ai" },
]
maintainers = [
  { name = "German Center for Open Source AI", email = "info@gcos.ai" },
]
keywords = [
  "aptamer",
  "bioinformatics",
  "maws",
  "molecular-docking",
  "openmm",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]

# Runtime dependencies
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "openmm>=8.0",
  "mpmath>=1.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov",
  "ruff>=0.12",
  "pre-commit",
]
# For GPU acceleration (CUDA)
gpu = [
  "openmm-cuda",
]

[project.urls]
Homepage = "https://github.com/gc-os-ai/MAWS_2025"
Repository = "https://github.com/gc-os-ai/MAWS_2025"
Issues = "https://github.com/gc-os-ai/MAWS_2025/issues"
Pyaptamer = "https://github.com/gc-os-ai/pyaptamer"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["maws*"]

[tool.setuptools.package-data]
# if you later move data under maws/, switch to:
# maws = ["data/*.pdb", "data/*.sdf", "data/*.lib", "data/*.frcmod"]

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = ["__pycache__", ".venv", "build", "dist", ".git"]

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP", "N", "C4"]
ignore = ["N803", "N806"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
  "integration: marks tests as integration tests (require AmberTools/OpenMM)",
  "slow: marks tests as slow running",
  "gpu: marks tests that require GPU",
]
